--- a/src/app/documents/lehrbogen.html
+++ b/src/app/documents/lehrbogen.html
@@ -34,13 +34,25 @@
 
 <cb-chapter ordinal="1">Vorbereitung</cb-chapter>
 
-<div class="cb-text-box">
+<div class="cb-text-box large">
   <p>
     Für <b>Bundle-Nutzer</b>:
   </p>
   <p>
-    Befolge die Schritte 1, 2 (nur 1.) und 4 (1.-2.) in <a routerLink="/bundle-einfuehrung-und-benutzungsanweisung">Cranberri Bundle: Einführung & Benutzungsanweisung</a>, um Cranberri zu installieren, ein Projekt zu erstellen und VS Code zu öffnen.
+    Installation:
   </p>
+  <ol>
+    <li>Erstelle in deinem Homeverzeichnis einen neuen Ordner, z. B. <cb-code>H:\Dokumente\Cranberri</cb-code>.</li>
+    <li>Navigiere im Dateiexplorer zu <cb-code>T:\...\Cranberri</cb-code> (im Tauschordner) und <i>kopiere</i> die beiden Verknüpfung-Dateien <cb-code>Start Cranberri</cb-code>, <cb-code>Start Minecraft</cb-code> und <cb-code>Start VS Code</cb-code> in den neu erstellten Ordner in deinem Homeverzeichnis.</li>
+  </ol>
+  <p>
+    Cranberri starten, Projekt erstellen und in VS Code öffnen:
+  </p>
+  <ol>
+    <li>Doppelklicke auf die Verknüpfung <cb-code>Start Cranberri</cb-code>.<br><div class="cb-warn">!</div> Achtung: Es dauert kurz, bis Cranberri startet. Versuche nicht, mehrfach zu klicken.</li>
+    <li>Klicke neben "Projects" auf "Create". Gib deinem Projekt einen Namen (keine Leerzeichen) und wähle über die Umschaltbuttons "simple" und Java (<!--TODO java icon-->). "Create" zum Abschließen.</li>
+    <li>Doppelklicke auf die Verknüpfung <cb-code>Start VS Code</cb-code>.<br><div class="cb-warn">!</div> Achtung: Es dauert kurz, bis VS Code startet. Versuche nicht, mehrfach zu klicken. Sobald VS Code erscheint, kannst du das Konsolenfenster schließen. <div class="cb-muted">Installiere keine Extensions in VS Code.</div></li>
+  </ol>
 </div>
 
 <p>
@@ -86,13 +98,24 @@ void tick() &lcub;
 
 <h2 class="no-space">Schaltung</h2>
 
-<div class="cb-text-box">
+<div class="cb-text-box large">
   <p>
     Für <b>Bundle-Nutzer</b>:
   </p>
   <p>
-    Befolge die Schritte 2 (2.-3.) und 3 in <a routerLink="/bundle-einfuehrung-und-benutzungsanweisung">Cranberri Bundle: Einführung & Benutzungsanweisung</a>, um den Server mit einer neuen Welt zu starten und die Welt in Minecraft zu öffnen.
+    Server mit neuer Welt starten:
   </p>
+  <ol>
+    <li>Wähle im Cranberri GUI links die Welt aus, die du starten möchtest, oder klicke auf "+ New World".</li>
+    <li>Klicke auf "Start Server". Das Konsolenfenster, das sich öffnet, ist dein Server, schließe es nicht.</li>
+  </ol>
+  <p>
+    Minecraft starten und Welt öffnen:
+  </p>
+  <ol>
+    <li>Doppelklicke auf die Verknüpfung <cb-code>Start Minecraft</cb-code>.<br><div class="cb-warn">!</div> Achtung: Es dauert kurz, bis Minecraft startet. Versuche nicht, mehrfach zu klicken.</li>
+    <li>Klicke, sobald Minecraft sich vollständig geöffnet hat, auf “Mehrspieler” und doppelklicke dann auf “Cranberri”, um die Welt zu öffnen.</li>
+  </ol>
 </div>
 
 <p>
