--- a/src/app/documents/bundle-einfuehrung-und-benutzungsanweisung.html
+++ b/src/app/documents/bundle-einfuehrung-und-benutzungsanweisung.html
@@ -30,7 +30,7 @@
 <cb-chapter ordinal="4">Projekte erstellen und bearbeiten</cb-chapter>
 
 <ol>
-  <li>Klicke, um ein Projekt zu erstellen, im Cranberri GUI neben "Projects" auf "Create". Gib deinem Projekt einen Namen (keine Leerzeichen) und wähle über die Umschaltbuttons "simple" und Java (<!--TODO java icon-->). "Create" zum Abschließen.</li>
+  <li>Klicke, um ein Projekt zu erstellen, im Cranberri GUI neben "Projects" auf "Create". Gib deinem Projekt einen Namen (keine Leerzeichen) und wähle über die Umschaltbuttons "simple" und Java (<img src="assets/badges/java.png" class="inline">). "Create" zum Abschließen.</li>
   <li>Doppelklicke auf die Verknüpfung <cb-code>Start VS Code</cb-code>.<br><div class="cb-warn">!</div> Achtung: Es dauert kurz, bis VS Code startet. Versuche nicht, mehrfach zu klicken. Sobald VS Code erscheint, kannst du das Konsolenfenster schließen. <div class="cb-muted">Installiere keine Extensions in VS Code.</div></li>
   <li>Klicke nun links auf den Namen deines Projekts, um den Ordner zu öffnen. Hier findest du den Ordner <cb-code>scripts</cb-code>, in dem du ein Beispielprogramm <cb-code>script.java</cb-code> findest. Doppelklicke darauf, um es zu öffnen.</li>
   <li style="color: grey"><div class="cb-muted">Fahre mit dem nächsten Kapitel fort, wenn dein Programm fertig ist.</div></li>
