--- a/src/app/documents/lehrbogen.html
+++ b/src/app/documents/lehrbogen.html
@@ -50,7 +50,7 @@
   </p>
   <ol>
     <li>Doppelklicke auf die Verknüpfung <cb-code>Start Cranberri</cb-code>.<br><div class="cb-warn">!</div> Achtung: Es dauert kurz, bis Cranberri startet. Versuche nicht, mehrfach zu klicken.</li>
-    <li>Klicke neben "Projects" auf "Create". Gib deinem Projekt einen Namen (keine Leerzeichen) und wähle über die Umschaltbuttons "simple" und Java (<!--TODO java icon-->). "Create" zum Abschließen.</li>
+    <li>Klicke neben "Projects" auf "Create". Gib deinem Projekt einen Namen (keine Leerzeichen) und wähle über die Umschaltbuttons "simple" und Java (<img src="assets/badges/java.png" class="inline">). "Create" zum Abschließen.</li>
     <li>Doppelklicke auf die Verknüpfung <cb-code>Start VS Code</cb-code>.<br><div class="cb-warn">!</div> Achtung: Es dauert kurz, bis VS Code startet. Versuche nicht, mehrfach zu klicken. Sobald VS Code erscheint, kannst du das Konsolenfenster schließen. <div class="cb-muted">Installiere keine Extensions in VS Code.</div></li>
   </ol>
 </div>
