creates fortgeschrittenes projekt

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,6 +13,7 @@
   <li><a routerLink="bundle-einfuehrung-und-benutzungsanweisung">Cranberri Bundle: Einführung & Benutzungsanweisung</a></li>
   <li><a routerLink="lehrbogen">Lehrbogen</a></li>
   <li><a routerLink="lehrbogen-evaluation">Lehrbogen: Evaluation</a></li>
+  <li><a routerLink="fortgeschrittenes-projekt">Fortgeschrittenes Projekt</a></li>
 </ul>
 
 <p style="color: grey">
