--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,7 +15,4 @@
   <li><a routerLink="lehrbogen-evaluation">Lehrbogen: Evaluation</a></li>
 </ul>
 
-<p style="color: grey">
-  <br>
-  Alle Inhalte &copy; 2023 JupiterPi
-</p>
+<cb-footer></cb-footer>
