--- a/src/app/documents/bundle-einfuehrung-und-benutzungsanweisung.html
+++ b/src/app/documents/bundle-einfuehrung-und-benutzungsanweisung.html
@@ -55,3 +55,5 @@
 </ol>
 
 <img src="assets/documents/bundle-einfuehrung-und-benutzungsanweisungen/abb-aufbau-beispielprojekt.png">
+
+<cb-footer></cb-footer>
