--- a/src/app/documents/lehrbogen.html
+++ b/src/app/documents/lehrbogen.html
@@ -43,20 +43,20 @@
   </p>
   <ol>
     <li>Erstelle in deinem Homeverzeichnis einen neuen Ordner, z. B. <cb-code>H:\Dokumente\Cranberri</cb-code>.</li>
-    <li>Navigiere im Dateiexplorer zu <cb-code>T:\...\Cranberri</cb-code> (im Tauschordner) und <i>kopiere</i> die beiden Verknüpfung-Dateien <cb-code>Start Cranberri</cb-code>, <cb-code>Start Minecraft</cb-code> und <cb-code>Start VS Code</cb-code> in den neu erstellten Ordner in deinem Homeverzeichnis.</li>
+    <li>Navigiere im Dateiexplorer zu <cb-code>T:\...\CRANBERRI LOCAL</cb-code> (im Tauschordner) und <i>kopiere</i> alle Dateien dort in den neu erstellten Ordner in deinem Homeverzeichnis.</li>
   </ol>
   <p>
     Cranberri starten, Projekt erstellen und in VS Code öffnen:
   </p>
   <ol>
     <li>Doppelklicke auf die Verknüpfung <cb-code>Start Cranberri</cb-code>.<br><div class="cb-warn">!</div> Achtung: Es dauert kurz, bis Cranberri startet. Versuche nicht, mehrfach zu klicken.</li>
-    <li>Klicke neben "Projects" auf "Create". Gib deinem Projekt einen Namen (keine Leerzeichen) und wähle über die Umschaltbuttons "simple" und Java (<img src="assets/badges/java.png" class="inline">). "Create" zum Abschließen.</li>
+    <li>Klicke neben "Projects" auf "New". Gib deinem Projekt den Namen "programm1" (keine Leerzeichen) und wähle über die Umschaltbuttons "simple" und Java (<img src="assets/badges/java.png" class="inline">). "Create" zum Abschließen.</li>
     <li>Doppelklicke auf die Verknüpfung <cb-code>Start VS Code</cb-code>.<br><div class="cb-warn">!</div> Achtung: Es dauert kurz, bis VS Code startet. Versuche nicht, mehrfach zu klicken. Sobald VS Code erscheint, kannst du das Konsolenfenster schließen. <div class="cb-muted">Installiere keine Extensions in VS Code.</div></li>
   </ol>
 </div>
 
 <p>
-  Erstelle ein neues Projekt, benenne es "programm1" und öffne es in VS Code.
+  Erstelle ein neues Java/simple-Projekt, benenne es "programm1" und öffne es in VS Code.
   Auf der linken Seite <cb-img-dot>1</cb-img-dot> findest du die Dateien, die dein Projekt umfasst.
   <cb-code>project.yaml</cb-code> und alles in <cb-code>lib</cb-code> ist für dich vorerst uninteressant.
 </p>
