lehrbogen: removed fix for (now fixed) flickering pins

--- a/src/app/documents/lehrbogen.html
+++ b/src/app/documents/lehrbogen.html
@@ -151,13 +151,14 @@ void tick() &lcub;
   <li>Platziere ihn auf einem passenden Block, z. B. einem Grasblock. Drücke <cb-code color="grey">Esc</cb-code>, um das Dialogfenster "Configure Computer" vorerst zu schließen.</li>
   <li>Platziere nun an der Seite des Computers eine Reihe von ca. 2 Glasblöcken in eine beliebige Richtung. Das ist die Basis für alle Pins am Computer. Pins sind die Stellen, an denen Redstone-Komponenten wie Lampen, Schalter etc. an den Computer angeschlossen werden können.</li>
   <li>Platziere an einen der Glasblöcke einen Redstone-Verstärker, der vom Glasblock wegzeigt. Das ist nun Pin 1.</li>
-  <li>Setze daran einen weiteren Verstärker<cb-footnote text="Das hat einen Bug zur Ursache, durch den die Leitung sonst flackert. Bis dieser behoben ist, ist das das einfachste Workaround."></cb-footnote> und verbinde mit einem Redstone-Staub eine Redstone-Lampe.</li>
+  <li>Verbinde mit einem Redstone-Staub eine Redstone-Lampe.</li>
 </ol>
 <p>
   Die Schaltung sollte jetzt so aussehen:
 </p>
 
 <img src="assets/documents/lehrbogen/abb-versuch1-schaltung.png">
+<p class="text cb-muted">(der zweite Redstone-Verstärker bei der Lampe ist <b>nicht mehr nötig</b>!)</p>
 <p></p>
 
 <div class="cb-text-box large">
@@ -219,6 +220,7 @@ void tick() &lcub;
 </p>
 
 <img src="assets/documents/lehrbogen/abb-versuch1-computer-gestartet.png">
+<p class="text cb-muted">(der zweite Redstone-Verstärker bei der Lampe ist <b>nicht mehr nötig</b>!)</p>
 
 <p>
   <b>Herzlichen Glückwunsch!</b> Du hast erfolgreich dein erstes Programm und deine erste Schaltung erstellt und die Lampe zum Leuchten gebracht.
@@ -425,6 +427,7 @@ void tick() &lcub;
   Erweitere dafür zuerst deine Schaltung um einen Knopf, der an Pin 2 angeschlossen ist. Da das jetzt ein Pin ist, an dem ein Signal vom Computer eingelesen werden soll, muss der Verstärker in den Glasblock zeigen.
 </p>
 <img src="assets/documents/lehrbogen/abb-versuch3-schaltung.png">
+<p class="text cb-muted">(der zweite Redstone-Verstärker bei der Lampe ist <b>nicht mehr nötig</b>!)</p>
 <p></p>
 <div class="cb-text-box">
   <cb-badge badge="minecraft"></cb-badge>
